[package]
name = "micro_eth"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"        # Real SHA-256 hashing (Ethereum uses Keccak, but this is close)
hex = "0.4"          # To print hashes as strings
chrono = "0.4"       # For timestamps
serde = { version = "1.0", features = ["derive"] } # Serialization (Bonus, but good practice)